WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190021
Fix IOSMAC build
https://bugs.webkit.org/show_bug.cgi?id=190021
Summary
Fix IOSMAC build
Sihui Liu
Reported
2018-09-26 18:03:39 PDT
NetworkProcess::parentProcessHasServiceWorkerEntitlement() not exists in PLATFORM(IOSMAC)
Attachments
Patch
(2.31 KB, patch)
2018-09-26 18:08 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch
(2.48 KB, patch)
2018-09-26 22:29 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch
(1.23 KB, patch)
2018-09-27 13:16 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2018-09-26 18:08:25 PDT
Created
attachment 350931
[details]
Patch
Sihui Liu
Comment 2
2018-09-26 22:29:20 PDT
Created
attachment 350942
[details]
Patch
Alex Christensen
Comment 3
2018-09-27 08:56:05 PDT
Comment on
attachment 350942
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=350942&action=review
Did you verify this fixes the build? If so, is there a way to just include NetworkProcessIOS in that build instead?
> Source/WebKit/NetworkProcess/cocoa/NetworkProcessCocoa.mm:275 > +#if !PLATFORM(IOSMAC)
With things like this, we usually have the positive form first: #if PLATFORM(IOSMAC)
Sihui Liu
Comment 4
2018-09-27 09:19:14 PDT
(In reply to Alex Christensen from
comment #3
)
> Comment on
attachment 350942
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=350942&action=review
> > Did you verify this fixes the build? If so, is there a way to just include > NetworkProcessIOS in that build instead? >
I am trying to build now. This patch would most likely fix the build because we have #if PLATFORM(IOS) && !PLATFORM(IOSMAC) in NetworkProcessIOS.mm. I will also try remove #if PLATFORM(IOS) && !PLATFORM(IOSMAC) from NetworkProcessIOS.mm.
> > Source/WebKit/NetworkProcess/cocoa/NetworkProcessCocoa.mm:275 > > +#if !PLATFORM(IOSMAC) > > With things like this, we usually have the positive form first: > #if PLATFORM(IOSMAC)
Gotta
Sihui Liu
Comment 5
2018-09-27 13:16:22 PDT
Created
attachment 350990
[details]
Patch
WebKit Commit Bot
Comment 6
2018-09-27 14:01:28 PDT
Comment on
attachment 350990
[details]
Patch Clearing flags on attachment: 350990 Committed
r236568
: <
https://trac.webkit.org/changeset/236568
>
WebKit Commit Bot
Comment 7
2018-09-27 14:01:30 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2018-09-27 14:03:30 PDT
<
rdar://problem/44842952
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug