Fix IOSMAC build https://bugs.webkit.org/show_bug.cgi?id=190021

Reviewed by Alex Christensen.

* NetworkProcess/mac/NetworkProcessMac.mm:
(WebKit::NetworkProcess::parentProcessHasServiceWorkerEntitlement const):


Canonical link: https://commits.webkit.org/205007@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236568 268f45cc-cd09-0410-ab3c-d52691b4dbfc